--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-scikit-learn==1.2.2
-pandas
-plotly
-joblib
-
+streamlit==1.25.0
+pandas==2.1.0
+numpy==1.27.0
+joblib==1.3.2
+plotly==5.16.0
+scikit-learn==1.3.2
