--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.25.0
-pandas==2.1.0
-numpy==1.27.0
-joblib==1.3.2
-plotly==5.16.0
-scikit-learn==1.3.2
+streamlit
+pandas
+numpy
+joblib
+plotly
+scikit-learn==1.6.1
